JumpScript/tests/baselines/reference/deleteOperatorInvalidOperations.errors.txt
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.jump(5,20): error TS1005: ',' expected.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.jump(5,26): error TS2703: The operand of a delete operator must be a property reference.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.jump(5,27): error TS1109: Expression expected.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.jump(8,22): error TS2703: The operand of a delete operator must be a property reference.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.jump(8,23): error TS1109: Expression expected.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.jump(13,16): error TS1102: 'delete' cannot be called on an identifier in strict mode.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.jump(13,16): error TS2703: The operand of a delete operator must be a property reference.


==== tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.jump (7 errors) ====
    // Unary operator delete
    var ANY;
    
    // operand before delete operator
    var BOOLEAN1 = ANY delete ;     //expect error
                       ~~~~~~
!!! error TS1005: ',' expected.
                             
!!! error TS2703: The operand of a delete operator must be a property reference.
                              ~
!!! error TS1109: Expression expected.
    
    // miss an operand
    var BOOLEAN2 = delete ;
                         
!!! error TS2703: The operand of a delete operator must be a property reference.
                          ~
!!! error TS1109: Expression expected.
    
    // delete global variable s
    class testADelx {
        constructor(public s: () => {}) {
            delete s;      //expect error
                   ~
!!! error TS1102: 'delete' cannot be called on an identifier in strict mode.
                   ~
!!! error TS2703: The operand of a delete operator must be a property reference.
        }
    }